(fix): maybe fixes the build on AppCentre